# tt_auto

./: .env.example  .gitignore  FUNCTION_AND_TEST_RULES.md  README.md  conftest.py  index.html  project_tree.txt  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: playwright.yml  regression_tests.yml  sanity_tests.yml
pages/api/: main_api.py  project_organize.py  task_organize.py  verify_funtions.py
pages/helper/: api_web_helpers.py  project_web_helpers.py  regression_helpers.py
pages/web/: config.py  generate_state.py  login_page.py  side_bar.py  view_contents.py
regression/: index.html
sanity/: index.html
tests/: test_LWEB_TC01.py
tests/api_and_web_intergration/: test_CAPIWEB_TC01.py  test_CAPIWEB_TC02.py  test_CAPIWEB_TC03.py  test_CAPIWEB_TC04.py  test_CAPIWEB_TC05.py  test_CAPIWEB_TC06.py  test_CAPIWEB_TC07.py  test_MAPIWEB_TC09.py  test_UAPIWEB_TC08.py  test_UAPIWEB_TC10.py
tests/project_organize_api/: test_CP_TC01.py  test_CP_TC02.py  test_CP_TC03.py  test_CP_TC04.py  test_CP_TC05.py  test_DP_TC05.py  test_GIDP_TC03.py  test_GUP_TC02.py  test_UP_TC04.py
tests/task_organize_api/: test_CT_TC01.py  test_CT_TC02.py  test_CT_TC03.py  test_CT_TC04.py  test_CT_TC05.py  test_UT_TC06.py  test_UT_TC07.py  test_UT_TC08.py  test_UT_TC09.py  test_UT_TC10.py
tests/task_project_organize_on_web/: test_CWEB_TC04.py  test_CWEB_TC05.py  test_CWEB_TC06.py  test_CWEB_TC07.py  test_CWEB_TC08.py  test_CWEB_TC09.py  test_CWEB_TC10.py  test_CWEB_TC11.py  test_CWEB_TC17.py  test_GWEB_TC12.py  test_GWEB_TC13.py  test_GWEB_TC14.py  (+10 more)
(+29 files in other folders)
