[project]
name = "ticktick-automation"
version = "0.1.0"
description = "Automation scripts for TickTick using Playwright and Python."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "allure-pytest>=2.16.0",
    "pytest-html>=4.2.0",
    "pytest-playwright>=0.7.2",
    "python-dotenv>=1.2.2",
]
